--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="90dp"
         android:layout_marginEnd="16dp"
+        android:onClick="onClickBotones"
         android:text="Palabras"
         app:layout_constraintEnd_toStartOf="@+id/btnCaracteresMain"
         app:layout_constraintHorizontal_bias="0.515"
@@ -55,6 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
         android:layout_marginEnd="64dp"
+        android:onClick="onClickBotones"
         android:text="Caracteres"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtFraseMain" />
